fix #27 - Fix UI on mobile display, edit Readme (add badge)

--- a/frontend/src/styles/components/_camera.sass
+++ b/frontend/src/styles/components/_camera.sass
@@ -7,5 +7,9 @@
     object-fit: cover
     min-height: 409px
 
+  @media only screen and (max-width: 768px)
+    img
+      min-height: auto
+
   .progress
     margin: 6px 4px 7px 4px !important
